Added views in correct format

--- a/www/index.html
+++ b/www/index.html
@@ -39,11 +39,10 @@
   </head>
   <body ng-app="starter">
     <div ng-controller="MainCtrl">
-      <ion-nav-bar class="bar-assertive" ng-show="showNavHeader">
+      <ion-nav-bar class="bar-assertive">
         <ion-nav-back-button>
         </ion-nav-back-button>
       </ion-nav-bar>
-               
       <ion-nav-view></ion-nav-view>
     </div>
   </body>
