--- a/www/index.html
+++ b/www/index.html
@@ -26,7 +26,7 @@
     <!-- <script src="lib/helpers/js/bootstrap.min.js"></script> -->
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
-    <!-- Firebase -->
+    <!-- Firebase file reference -->
     <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase.js"></script>
     <!-- AngularFire -->
     <script src="https://cdn.firebase.com/libs/angularfire/2.0.1/angularfire.min.js"></script>
