--- a/www/index.html
+++ b/www/index.html
@@ -40,7 +40,7 @@
 
 <body ng-app="kompair">
     <div ng-controller="MainCtrl as main">
-        <ion-nav-bar class="bar-assertive" ng-show="main.oShared.bSingedIn">
+        <ion-nav-bar class="bar-calm" ng-show="main.oShared.bSingedIn">
             <ion-nav-back-button>
             </ion-nav-back-button>
         </ion-nav-bar>
