--- a/www/index.html
+++ b/www/index.html
@@ -27,7 +27,10 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
     <!-- Firebase file reference -->
-    <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase.js"></script>
+    <!-- <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase.js"></script> -->
+    <script src="https://www.gstatic.com/firebasejs/3.5.2/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/3.5.2/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/3.5.2/firebase-database.js"></script>
     <!-- AngularFire -->
     <script src="https://cdn.firebase.com/libs/angularfire/2.0.1/angularfire.min.js"></script>
     <!-- your app's js -->
@@ -36,11 +39,13 @@
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
     <script src="js/common/commonRoutines.js"></script>
+    <script src="js/common/constructorService.js"></script>
 </head>
 
 <body ng-app="kompair">
     <div ng-controller="MainCtrl as main">
-        <ion-nav-bar class="bar-calm" ng-show="main.oShared.bSingedIn">
+        <!-- <ion-nav-bar class="bar-calm" ng-show="main.oShared.bSingedIn"> -->
+        <ion-nav-bar class="bar-calm" ng-show="true">
             <ion-nav-back-button>
             </ion-nav-back-button>
         </ion-nav-bar>
